mesa-21.1.1/src/gallium/drivers/vc4/vc4_resource.c:790: reading from uninitialised array
mesa-21.1.1/src/gallium/drivers/vc4/vc4_resource.c:790:72: error: Uninitialized variable: found_colors[i] [uninitvar]
$ fgrep found_colors src/gallium/drivers/vc4/vc4_resource.c uint32_t found_colors[10]; uint32_t num_found_colors = 0; for (i = 0; i < num_found_colors; i++) { if (pix == found_colors[i])
It is probably best to write something into local array found_colors before reading from it.